--- a/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -2,10 +2,13 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layout/LayoutPadrao">
+	layout:decorator="layout/LayoutPadrao"
+	xmlns:brewer="http://brewer.buzzworks.com">
 
 <head>
 <title>Cadastro de cerveja</title>
+
+<link rel="stylesheet" th:href="@{/stylesheets/vendors/upload.min.css}" />
 </head>
 
 <body>
@@ -20,35 +23,33 @@
 		<div class="container-fluid">
 
 
-			<th:block th:include='fragments/MensagemSucesso'></th:block>
+
 
 			<form method="POST" th:object="${cerveja}"
 				class="form-vertical  js-form-loading">
-
-				<th:block th:include='fragments/MensagensErroValidacao'></th:block>
+				<brewer:message />
 
 				<div class="row">
-					<div class="col-sm-2  form-group"
-						th:classappend="${#fields.hasErrors('sku')}? has-error">
+					<div class="col-sm-2  form-group  bw-required" brewer:classforerror="sku">
 						<label for="sku" class="control-label">SKU</label>
 						<input id="sku" type="text" class="form-control" th:field="*{sku}" />
 					</div>
 
-					<div class="col-sm-10  form-group" th:classappend="${#fields.hasErrors('nome')}? has-error">
+					<div class="col-sm-10  form-group  bw-required" brewer:classforerror="nome">
 						<label for="nome" class="control-label">Nome</label>
 						<input id="nome" type="text" class="form-control"
 							th:field="*{nome}" />
 					</div>
 				</div>
 
-				<div class="form-group" th:classappend="${#fields.hasErrors('descricao')}? has-error">
+				<div class="form-group  bw-required" brewer:classforerror="descricao">
 					<label for="descricao" class="control-label">Descrição</label>
 					<textarea id="descricao" rows="3" class="form-control"
 						th:field="*{descricao}"></textarea>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('estilo')}? has-error">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="estilo">
 						<label for="estilo" class="control-label">Estilo</label>
 						<div class="bw-field-action">
 							<select id="estilo" class="form-control" th:field="*{estilo}">
@@ -67,7 +68,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('sabor')}? has-error">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="sabor">
 						<label for="sabor" class="control-label">Sabor</label>
 						<select id="sabor" class="form-control" th:field="*{sabor}">
 							<option value="">Selecione o sabor</option>
@@ -76,8 +77,10 @@
 						</select>
 					</div>
 
-					<div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('teorAlcoolico')}? has-error">
-						<label for="teorAlcoolico" class="control-label">Teor alcoólico</label>
+					<div class="col-sm-3  form-group  bw-required"  
+						brewer:classforerror="teorAlcoolico">
+						<label for="teorAlcoolico" class="control-label">Teor
+							alcoólico</label>
 						<div class="input-group">
 							<input id="teorAlcoolico" type="text"
 								class="form-control  js-decimal" th:field="*{teorAlcoolico}" />
@@ -85,7 +88,8 @@
 						</div>
 					</div>
 
-					<div class="col-lg-3  col-sm-6  form-group" th:classappend="${#fields.hasErrors('origem')}? has-error">
+					<div class="col-lg-3  col-sm-6  form-group  bw-required"
+						brewer:classforerror="origem">
 						<label for="origem" class="control-label">Origem</label>
 						<div>
 							<th:block th:each="origem : ${origens}">
@@ -100,7 +104,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('valor')}? has-error">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="valor">
 						<label for="valor" class="control-label">Valor</label>
 						<div class="input-group">
 							<div class="input-group-addon">R$</div>
@@ -109,7 +113,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('comissao')}? has-error">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="comissao">
 						<label for="comissao" class="control-label">Comissão</label>
 						<div class="input-group">
 							<input id="comissao" type="text" class="form-control  js-decimal"
@@ -118,10 +122,31 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('quantidadeEstoque')}? has-error">
+					<div class="col-sm-3  form-group  bw-required"
+						brewer:classforerror="quantidadeEstoque">
 						<label for="estoque" class="control-label">Estoque</label>
 						<input id="estoque" type="text" class="form-control  js-plain"
 							th:field="*{quantidadeEstoque}" />
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="form-group col-sm-12">
+						<input type="hidden" th:field="*{foto}">
+						<input type="hidden" th:field="*{contentType}">
+
+						<label class="control-label">Foto</label>
+
+						<div class="js-container-foto-cerveja" th:attr="data-url-fotos=@{/foto}">
+							<div id="upload-drop" class="bw-upload">
+								<i class="glyphicon  glyphicon-cloud-upload"></i>
+								<span>Arraste a foto aqui ou </span>
+								<a class="bw-upload-form-file">
+									selecione
+									<input id="upload-select" type="file" accept=".jpg,.jpeg,.png" />
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -133,11 +158,18 @@
 		</div>
 
 		<div th:replace="estilo/CadastroRapidoEstilo :: modal"></div>
+		<th:block th:replace="hbs/FotoCerveja"></th:block>
 	</section>
 
-<th:block layout:fragment="javascript-extra">
-<script th:src="@{/javascripts/estilo.cadastro-rapido.js}"></script>
-</th:block>
+	<th:block layout:fragment="javascript-extra">
+		<script th:src="@{/javascripts/estilo.cadastro-rapido.js}"></script>
+		<script th:src="@{/javascripts/vendors/uikit.min.js}"></script>
+		<script th:src="@{/javascripts/vendors/upload.min.js}"></script>
+		<script th:src="@{/javascripts/vendors/handlebars.min.js}"></script>
+		<script th:src="@{/javascripts/cerveja.upload-foto.js}"></script>
+
+		
+	</th:block>
 
 </body>
 </html>
