--- a/src/main/resources/templates/fragments/MensagensErroValidacao.html
+++ b/src/main/resources/templates/fragments/MensagensErroValidacao.html
@@ -2,18 +2,20 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 
-<div class="alert  alert-danger  alert-dismissible" role="alert"
-	th:if="${#fields.hasAnyErrors()}">
-	<button type="button" class="close" data-dismiss="alert"
-		aria-label="Close">
-		<span aria-hidden="true">&times;</span>
-	</button>
-	<th:block th:each="detailedError : ${#fields.detailedErrors()}">
-		<div>
-			<i class="fa  fa-exclamation-circle"></i>
-			[[${detailedError.message}]]
-		</div>
-	</th:block>
+<div th:fragment="alert">
+	<div class="alert  alert-danger  alert-dismissible" role="alert"
+		th:if="${#fields.hasAnyErrors()}">
+		<button type="button" class="close" data-dismiss="alert"
+			aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		</button>
+		<th:block th:each="detailedError : ${#fields.detailedErrors()}">
+			<div>
+				<i class="fa  fa-exclamation-circle"></i>
+				[[${detailedError.message}]]
+			</div>
+		</th:block>
+	</div>
 </div>
 
 </html>
