Atualização da barra de paginação da pagina de pesquisa

--- a/src/main/resources/templates/cerveja/PesquisaCervejas.html
+++ b/src/main/resources/templates/cerveja/PesquisaCervejas.html
@@ -107,7 +107,7 @@
 				</thead>
 				
 				<tbody>
-					<tr th:each="cerveja : ${cervejas}">
+					<tr th:each="cerveja : ${pagina.content}">
 						<td class="text-center">
 							<img th:src="@{/foto/thumbnail.{foto}(foto=${cerveja.fotoOuMock})}" class="img-responsive"/>
 						</td>
@@ -125,27 +125,24 @@
 							</a>
 						</td>
 					</tr>
-					<tr th:if="${#lists.isEmpty(cervejas)}">
+					<tr th:if="${#lists.isEmpty(pagina.content)}">
 						<td colspan="7">Nenhuma cerveja encontrada</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
-		<div class="col-sm-12  text-center">
+		<div class="col-sm-12  text-center" th:if="${not #lists.isEmpty(pagina.content)}">
 			<nav>
 				<ul class="pagination  pagination-sm">
 					<li class="disabled">
 						<a href="#"><span>&laquo;</span></a>
 					</li>
-					<li>
-						<a href="?page=0">1</a>
-					</li>
-					<li>
-						<a href="?page=1">2</a>
-					</li>
-					<li>
-						<a href="?page=2">3</a>
-					</li>
+					<th:block th:each="p : ${#numbers.sequence(1, pagina.totalPages)}" th:with="numeroPagina=${p - 1}, paginaAtual=${pagina.number}">
+						<li th:class="${paginaAtual == numeroPagina} ? active">
+							<a th:href="|?page=${numeroPagina}|">[[${p}]]</a>
+						</li>
+					</th:block>
+					
 					<li class="disabled">
 						<a href="#"><span>&raquo;</span></a>
 					</li>
