--- a/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/src/main/resources/templates/cliente/CadastroCliente.html
@@ -2,6 +2,7 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:data="http://www.thymeleaf.org/extras/data"
 	layout:decorator="layout/LayoutPadrao">
 <head>
 <title>Cadastro de cliente</title>
@@ -10,108 +11,103 @@
 
 	<section layout:fragment="conteudo">
 
-
-		<div class="page-header">
-			<div class="container-fluid">
-				<h1>Cadastro de cliente</h1>
-			</div>
-		</div>
-
+	<div class="page-header">
 		<div class="container-fluid">
-
-			<form method="POST" th:object="${cliente}"
-				class="form-vertical  js-form-loading">
-
-				<div class="form-group">
-					<label for="nome">Nome</label>
-					<input id="nome" type="text" class="form-control"
-						autofocus="autofocus" />
-				</div>
-
-				<div class="row">
-					<div class="col-sm-4 form-group">
-						<label>Tipo pessoa</label>
-						<div>
-							<div class="radio radio-inline">
-								<input type="radio" name="tipoPessoa">
-								<label>Física</label>
-							</div>
-							<div class="radio radio-inline">
-								<input type="radio" name="tipoPessoa">
-								<label>Jurídica</label>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-8 form-group">
-						<label for="cpfcnpj">CPF/CNPJ</label>
-						<input id="cpfcnpj" type="text" class="form-control" />
-					</div>
-				</div>
-
-
-
-
-
-				<div class="row">
-					<div class="col-sm-4 form-group">
-						<label for="telefone">Telefone</label>
-						<input id="telefone" type="text" class="form-control" />
-					</div>
-					<div class="col-sm-8 form-group">
-						<label for="email">E-mail</label>
-						<input id="email" type="text" class="form-control" />
-					</div>
-				</div>
-
-
-
-				<div class="row">
-					<div class="col-sm-4 form-group">
-						<label for="logradouro">Logradouro</label>
-						<input id="logradouro" type="text" class="form-control" />
-					</div>
-					<div class="col-sm-4 form-group">
-						<label for="numero">Número</label>
-						<input id="numero" type="text" class="form-control" />
-					</div>
-					<div class="col-sm-4 form-group">
-						<label for="complemento">Complemento</label>
-						<input id="complemento" type="text" class="form-control" />
-					</div>
-				</div>
-
-
-
-
-				<div class="row">
-					<div class="col-sm-4 form-group">
-						<label for="cep">CEP</label>
-						<input id="cep" type="text" class="form-control" />
-					</div>
-					<div class="col-sm-4 form-group">
-						<label for="estado">Estado</label>
-						<select id="estado" class="form-control">
-							<option value="">Selecione o estado</option>
-						</select>
-					</div>
-					<div class="col-sm-4 form-group">
-
-						<label for="cidade">Cidade</label>
-						<select id="cidade" class="form-control">
-							<option value="">Selecione a cidade</option>
-						</select>
-					</div>
-				</div>
-
-
-				<div class="form-group">
-					<button class="btn  btn-primary" type="submit">Salvar</button>
-				</div>
-			</form>
+			<h1>
+				Cadastro de cliente
+			</h1>
 		</div>
+	</div>
 
+	<div class="container-fluid">
+		<form>
+			<div class="row">
+				<div class="form-group  col-sm-12">
+					<label for="nome">Nome</label>
+					<input type="text" class="form-control" id="nome" autofocus="autofocus"/>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="form-group  col-sm-4">
+					<label>Tipo pessoa</label> 
+					<div>
+						<th:block th:each="tipoPessoa : ${tiposPessoa}">
+							<div class="radio  radio-inline">
+								<input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" 
+									name="tipoPessoa" data:documento="${tipoPessoa.documento}" data:mascara="${tipoPessoa.mascara}"> 
+								<label class="control-label" th:for="|id_${tipoPessoa}|" th:text="${tipoPessoa.descricao}">Física</label>
+							</div>
+						</th:block>
+					</div>
+				</div>
+				
+				<div class="form-group  col-sm-8" >
+					<label for="cpfOuCnpj">CPF/CNPJ</label>
+					<input type="text" class="form-control" id="cpfOuCnpj" disabled/>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="form-group  col-sm-4">
+					<label for="telefone">Telefone</label>
+					<input type="text" class="form-control  js-phone-number" id="telefone"/>
+				</div>
+				
+				<div class="form-group  col-sm-8">
+					<label for="email">E-mail</label>
+					<input type="text" class="form-control" id="email"/>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="form-group  col-sm-4">
+					<label for="logradouro">Logradouro</label>
+					<input type="text" class="form-control" id="logradouro"/>
+				</div>
+				
+				<div class="form-group  col-sm-4">
+					<label for="numero">Número</label>
+					<input type="text" class="form-control" id="numero"/>
+				</div>
+				
+				<div class="form-group  col-sm-4">
+					<label for="complemento">Complemento</label>
+					<input type="text" class="form-control" id="complemento"/>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="form-group  col-sm-4">
+					<label for="cep">CEP</label>
+					<input type="text" class="form-control  js-cep" id="cep"/>
+				</div>
+				
+				<div class="form-group  col-sm-4">
+					<label for="estado">Estado</label>
+					<select id="estado" class="form-control">
+	                    <option value="">Selecione o estado</option>
+	                    <option th:each="estado : ${estados}" th:value="${estado.codigo}" th:text="${estado.nome}">São Paulo</option>
+	                </select>
+				</div>
+				
+				<div class="form-group  col-sm-4">
+					<label  for="cidade">Cidade</label>
+					<select id="cidade" class="form-control">
+						<option value="">Selecione a cidade</option>
+					</select>
+				</div>
+			</div>
+			
+			<button type="submit" class="btn  btn-primary">Salvar</button>				
+		</form>
+	</div>
+</section>
 
-	</section>
+<th:block layout:fragment="javascript-extra">
+	<script th:src="@{/javascripts/cliente.mascara-cpf-cnpj.js}"></script>
+</th:block>
+
 
 </body>
 
