--- a/src/main/resources/templates/fragments/MensagemSucesso.html
+++ b/src/main/resources/templates/fragments/MensagemSucesso.html
@@ -2,14 +2,9 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org">
 	
-<th:block th:fragment="order (pagina, propriedade, texto)">
-	<a th:href="${pagina.urlOrdenada(propriedade)}" th:remove="${pagina.vazia} ? tag">
-		<span th:text="${texto}"></span>
-		<span class="dropup" th:remove="${pagina.descendente(propriedade)} ? tag"
-				th:if="${pagina.ordenada(propriedade)}">
-			<span class="caret"></span>
-		</span>
-	</a>
-</th:block>
+<div class="alert  alert-success  alert-dismissible" role="alert" th:if="${not #strings.isEmpty(mensagem)}" th:fragment="alert">
+	<button type="button" class="close" data-dismiss="alert" ><span aria-hidden="true">&times;</span></button>
+	<span th:text="${mensagem}"></span>
+</div>
 	
 </html>
