--- a/src/main/resources/templates/cidade/CadastroCidade.html
+++ b/src/main/resources/templates/cidade/CadastroCidade.html
@@ -1,48 +1,57 @@
+ 
 <!DOCTYPE html>
-<html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layout/LayoutPadrao">
+	layout:decorate="~{layout/LayoutPadrao}"
+	xmlns:brewer="http://brewer.buzzworks.com">
+
 <head>
-<title>Cadastro de cidade</title>
+	<title>Cadastro de cidade</title>
 </head>
-<body>
 
-	<section layout:fragment="conteudo">
+<section layout:fragment="conteudo">
 
-
-		<div class="page-header">
-			<div class="container-fluid">
-				<h1>Cadastro de cidade</h1>
-			</div>
-		</div>
-
+	<div class="page-header">
 		<div class="container-fluid">
-
-
-			<div class=row>
-				<div class="col-sm-4 form-group">
-					<label for="estado">Estado</label>
-					<select id="estado" class="form-control">
-						<option value="">Selecione o estado</option>
-					</select>
+			<div class="row">
+				<div class="col-sm-10">
+					<h1>Cadastro de cidade</h1>
 				</div>
-				<div class="col-sm-8 form-group">
-					<label for="nome">Nome</label>
-					<input id="nome" type="text" class="form-control" autofocus="autofocus" />
+				
+				<div class="col-sm-2">
+					<div class="aw-page-header-controls">
+						<a class="btn  btn-default" th:href="@{/cidade}">
+							<i class="glyphicon  glyphicon-plus-sign"></i> <span class="hidden-xs  hidden-sm">Pesquisa</span>
+						</a>
+					</div>
 				</div>
 			</div>
-
-			
-			<div class="form-group">
-				<button class="btn  btn-primary" type="submit">Salvar</button>
-			</div>
-
 		</div>
-
-
-	</section>
-
-</body>
+	</div>
+	
+	<div class="container-fluid">
+		<form method="POST" th:object="${cidade}" th:action="@{/cidade/nova}">
+			<brewer:message/>
+			
+			<div class="row">
+				<div class="form-group  col-sm-4  bw-required" brewer:classforerror="estado">
+					<label for="estado" class="control-label">Estado</label>
+					<select id="estado" class="form-control" th:field="*{estado}">
+	                    <option value="">Selecione o estado</option>
+	                    <option th:each="estado : ${estados}" th:value="${estado.codigo}" th:text="${estado.nome}">São Paulo</option>
+	                </select>
+				</div>
+				
+				<div class="form-group  col-sm-8  bw-required" brewer:classforerror="nome">
+					<label for="nome" class="control-label">Nome</label>
+					<input type="text" class="form-control" id="nome" th:field="*{nome}"/>
+				</div>
+			</div>
+			
+			<button type="submit" class="btn  btn-primary">Salvar</button>
+		</form>
+	</div>
+</section>
 
 </html>
