--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -1,95 +1,95 @@
 <!DOCTYPE html>
-<html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layout/LayoutPadrao">
+	xmlns:th="http://www.thymeleaf.org"
+	layout:decorate="~{layout/LayoutPadrao}"
+	xmlns:brewer="http://brewer.buzzworks.com">
 
 <head>
-<title>Cadastro de usuário</title>
-<link rel="stylesheet" type="text/css"
-	th:href="@{/stylesheets/vendors/bootstrap-switch.min.css}" />
+	<title>Cadastro de usuário</title>
+	
+	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/vendors/bootstrap-switch.min.css}"/>
 </head>
 
-<body>
+<section layout:fragment="conteudo">
 
-	<section layout:fragment="conteudo">
-
-
-		<div class="page-header">
-			<div class="container-fluid">
-				<h1>Cadastro de usuário</h1>
-			</div>
-		</div>
-
+	<div class="page-header">
 		<div class="container-fluid">
-
-			<div class="form-group">
-				<label for="nome">Nome</label>
-				<input id="nome" type="text" class="form-control"
-					autofocus="autofocus" />
-			</div>
-
+			<h1>
+				Cadastro de usuário
+			</h1>
+		</div>
+	</div>
+	
+	<div class="container-fluid">
+		<form method="POST" th:object="${usuario}">
+			<brewer:message/>
+			
 			<div class="row">
-				<div class="col-sm-6 form-group">
-					<label for="email">E-mail</label>
-					<input id="email" type="text" class="form-control" />
-				</div>
-				<div class="col-sm-3 form-group">
-					<label for="dataNascimento">Data de Nascimento</label>
-					<input id="dataNascimento" type="text" class="form-control" />
+				<div class="form-group  col-sm-12  bw-required" brewer:classforerror="nome">
+					<label for="nome" class="control-label">Nome</label>
+					<input type="text" class="form-control" id="nome" autofocus="autofocus" th:field="*{nome}"/>
 				</div>
 			</div>
-
-
-
-
-
+				
 			<div class="row">
-				<div class="col-sm-3 form-group">
-					<label for="senha">Senha</label>
-					<input id="senha" type="password" class="form-control" />
+				<div class="form-group  col-sm-6  bw-required" brewer:classforerror="email">
+					<label for="email" class="control-label">E-mail</label>
+					<input type="text" class="form-control" id="email" th:field="*{email}"/>
 				</div>
-				<div class="col-sm-3 form-group">
-					<label for="confirmacaoSenha">Confirmação de senha</label>
-					<input id="confirmacaoSenha" type="password" class="form-control" />
+				
+				<div class="form-group  col-sm-3">
+					<label for="dataNascimento" class="control-label">Data de nascimento</label>
+					<input type="text" class="form-control" id="dataNascimento" th:field="*{dataNascimento}"/>
 				</div>
-
-				<div class="col-sm-3 form-group">
-					<label for="control-label">Status</label>
+			</div>
+			
+			<div class="row">
+				<div class="form-group  col-sm-3  bw-required">
+					<label for="senha" class="control-label">Senha</label> 
+					<input type="password" class="form-control" id="senha"/>
+				</div>
+				
+				<div class="form-group  col-sm-3  bw-required">
+					<label for="confirmacaoSenha" class="control-label">Confirmação de senha</label> 
+					<input type="password" class="form-control" id="confirmacaoSenha"/>
+				</div>
+				
+				<div class="form-group  col-sm-3">
+					<label class="control-label">Status</label>
 					<div>
-						<input type="checkbox" class="js-status" data-size="small"
-							data-off-color="danger" data-on-text="Ativo"
-							data-off-text="Inativo" />
+						<input type="checkbox" class="js-status" data-size="small" data-off-color="danger" 
+							data-on-text="Ativo" data-off-text="Inativo"/>
 					</div>
 				</div>
+				
 			</div>
+			
 			<div class="row">
-				<div class="col-sm-6 form-group">
-					<label class="control-label">Grupos</label>
-					<div class="checkbox checkbox-inline">
-						<input type="checkbox" />
-						<label>Administrador</label>
-					</div>
-					<div class="checkbox checkbox-inline">
-						<input type="checkbox" />
-						<label>Vendedor</label>
+				<div class="form-group  col-sm-6  bw-required" brewer:classforerror="grupos">
+					<label class="control-label">Grupos</label> 
+					<div>
+  						<div class="checkbox  checkbox-inline"> 
+	    					<input type="checkbox" />
+	    					<label>Administrador</label>
+    					</div>
+    					<div class="checkbox  checkbox-inline"> 
+	    					<input type="checkbox" />
+	    					<label>Vendedor</label>
+    					</div>
 					</div>
 				</div>
 			</div>
-		</div>
+			
+			<button type="submit" class="btn  btn-primary">Salvar</button>
+		</form>
+	</div>
+</section>
 
-		<div class="form-group">
-			<button class="btn  btn-primary" type="submit">Salvar</button>
-		</div>
-	</section>
-
-
-	<th:block layout:fragment="javascript-extra">
-		<script th:src="@{/javascripts/vendors/bootstrap-switch.min.js}"></script>
-		<script>
-			$('.js-status').bootstrapSwitch();
-		</script>
-	</th:block>
-</body>
-
+<th:block layout:fragment="javascript-extra">
+	<script th:src="@{/javascripts/vendors/bootstrap-switch.min.js}"></script>
+	<script>
+		$('.js-status').bootstrapSwitch();
+	</script>
+</th:block>
 </html>
