--- a/src/main/resources/templates/estilo/CadastroEstilo.html
+++ b/src/main/resources/templates/estilo/CadastroEstilo.html
@@ -21,7 +21,7 @@
 	<div class="container-fluid">
 		<th:block th:include="fragments/MensagemSucesso"></th:block>
 	
-		<form method="POST" th:object="${estilo}">
+		<form method="POST" th:object="${estilo}"th:action="@{/estilo/novo}">
 			<th:block th:include="fragments/MensagensErroValidacao"></th:block>
 			
 			<div class="row">
