--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -17,6 +17,8 @@
 	th:href="@{/layout/stylesheets/application.css}" />
 <link rel="stylesheet" type="text/css"
 	th:href="@{/stylesheets/brewer.css}" />
+	
+	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/vendors/bootstrap-datepicker.standalone.min.css}"/>
 
 <link rel="shortcut icon" th:href="@{/images/favicon.png}" />
 
@@ -29,6 +31,8 @@
 </head>
 
 <body>
+<input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+<input type="hidden" name="_csrf_header" th:value="${_csrf.headerName}"/>
 	<div class="aw-layout-page">
 		<div th:replace="layout/fragments/BarraNavegacao :: navbar"></div>
 
@@ -45,6 +49,8 @@
 	<script th:src="@{/layout/javascripts/algaworks.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/jquery.maskMoney.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/jquery.mask.min.js}"></script>
+	<script th:src="@{/javascripts/vendors/bootstrap-datepicker.min.js}"></script>
+	<script th:src="@{/javascripts/vendors/bootstrap-datepicker.pt-BR.min.js}"></script>
 	<script th:src="@{/javascripts/brewer.js}"></script>
 
 
