--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -22,7 +22,7 @@
 	</div>
 	
 	<div class="container-fluid">
-		<form method="POST" th:object="${usuario}">
+		<form method="POST" th:object="${usuario}" th:action="@{/usuario/novo}">
 			<brewer:message/>
 			
 			<div class="row">
@@ -40,26 +40,26 @@
 				
 				<div class="form-group  col-sm-3">
 					<label for="dataNascimento" class="control-label">Data de nascimento</label>
-					<input type="text" class="form-control" id="dataNascimento" th:field="*{dataNascimento}"/>
+					<input type="text" class="form-control js-date" id="dataNascimento" th:field="*{dataNascimento}"/>
 				</div>
 			</div>
 			
 			<div class="row">
-				<div class="form-group  col-sm-3  bw-required">
+				<div class="form-group  col-sm-3" brewer:classforerror="senha" th:classappend="${usuario.novo} ? bw-required">
 					<label for="senha" class="control-label">Senha</label> 
-					<input type="password" class="form-control" id="senha"/>
+					<input type="password" class="form-control" id="senha" th:field="*{senha}"/>
 				</div>
 				
-				<div class="form-group  col-sm-3  bw-required">
+				<div class="form-group  col-sm-3" brewer:classforerror="confirmacaoSenha">
 					<label for="confirmacaoSenha" class="control-label">Confirmação de senha</label> 
-					<input type="password" class="form-control" id="confirmacaoSenha"/>
+					<input type="password" class="form-control" id="confirmacaoSenha" th:field="*{confirmacaoSenha}"/>
 				</div>
 				
 				<div class="form-group  col-sm-3">
 					<label class="control-label">Status</label>
 					<div>
 						<input type="checkbox" class="js-status" data-size="small" data-off-color="danger" 
-							data-on-text="Ativo" data-off-text="Inativo"/>
+							data-on-text="Ativo" data-off-text="Inativo" th:field="*{ativo}"/>
 					</div>
 				</div>
 				
@@ -69,14 +69,12 @@
 				<div class="form-group  col-sm-6  bw-required" brewer:classforerror="grupos">
 					<label class="control-label">Grupos</label> 
 					<div>
-  						<div class="checkbox  checkbox-inline"> 
-	    					<input type="checkbox" />
-	    					<label>Administrador</label>
-    					</div>
-    					<div class="checkbox  checkbox-inline"> 
-	    					<input type="checkbox" />
-	    					<label>Vendedor</label>
-    					</div>
+						<th:block th:each="grupo : ${grupos}">
+	  						<div class="checkbox  checkbox-inline"> 
+		    					<input type="checkbox" th:value="${grupo.codigo}" th:field="*{grupos}"/>
+		    					<label th:for="${#ids.prev('grupos')}" th:text="${grupo.nome}">Administrador</label>
+	    					</div>
+	    				</th:block>
 					</div>
 				</div>
 			</div>
