--- a/src/main/resources/templates/venda/CadastroVenda.html
+++ b/src/main/resources/templates/venda/CadastroVenda.html
@@ -3,7 +3,8 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/LayoutPadrao}"
-	xmlns:brewer="http://brewer.algaworks.com">
+	xmlns:brewer="http://brewer.algaworks.com"
+	xmlns:data="http://www.thymeleaf.org/extras/data">
 
 <head>
 	<title>Cadastro de venda</title>
@@ -108,36 +109,18 @@
 					<div class="row">
 						<div class="form-group  col-lg-12">
 							<input type="text" class="form-control js-sku-nome-cerveja-input" id="cerveja" 
-								placeholder="Pesquise e adicione a cerveja pelo SKU ou nome" autofocus="autofocus" />
+								placeholder="Pesquise e adicione a cerveja pelo SKU ou nome" autofocus="autofocus" 
+								data:url="@{/cerveja}"/>
 						</div>
 					</div>
 					
-					<div class="bw-tabela-cervejas">
-						<div class="bw-tabela-item">
-							<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--foto">
-								<img th:src="@{/foto/thumbnail.cerveja-mock.png}" class="img-responsive"/>
-							</div>
-							
-							<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--detalhes">
-								<span class="bw-tabela-cerveja-nome">Negra Modelo Long Neck 355ml</span>
-								<span class="label  label-default">AA1112</span>
-								<span class="bw-tabela-cerveja-origem">Importada</span>
-							</div>
-							
-							<div class="bw-tabela-item__coluna  bw-tabela-item__coluna--valores">
-								<div class="bw-tabela-cerveja-valor-pequeno">
-									<input type="text" maxlength="3" class="bw-tabela-cerveja-campo-quantidade" value="1"/>
-									<span>x R$8,90</span>
-								</div>
-								<div class="bw-tabela-cerveja-valor-grande">R$8,90</div>
-							</div>
+					<div class="bw-tabela-cervejas  js-tabela-cervejas-container">
 						
-						</div>
 					
-						<!-- <div class="bw-tabela-cervejas__vazio">
+						<div class="bw-tabela-cervejas__vazio">
 							<i class="glyphicon  glyphicon-shopping-cart"></i> 
 							<span>Você ainda não adicionou nenhuma cerveja.</span>
-						</div> -->
+						</div> 
 					</div>
 				</div>
 				
@@ -192,6 +175,7 @@
 	<script th:src="@{/javascripts/vendors/handlebars.min.js}"></script>
 	<script th:src="@{/javascripts/cliente.pesquisa-rapida.js}"></script>
 	<script th:src="@{/javascripts/venda.autocomplete-itens.js}"></script>
+	<script th:src="@{/javascripts/venda.tabela-itens.js}"></script>
 	<script>
 	$(function() {
 		$('.js-abas-venda a').click(function (e) {
